welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:3: error: '<-' expected but ')' found.
for (i<= 0 to dimension){
                       ^Runner:14: error: illegal start of simple expression
	}
        ^