welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var nombre = 9;
var i = 0;
for (i<= 0 to dimension){

	avance();avance();avance();avance();avance();avance();avance();avance();
	gauche();
	avance();avance();avance();avance();avance();avance();avance();avance();
	gauche();
	avance();avance();avance();avance();avance();avance();avance();avance();
	gauche();
	avance();avance();avance();avance();avance();avance();avance();avance();
}